# theremaxi

./: .dir-locals.el  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  Doxyfile.in  NEWS.md  README  README.md  ThereMaxi.icon  ThereMaxi.pl
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
fuzz/: fuzz_theremaxi.cpp
lib/: Controller.pm  Device.pm  Editor.pm  Event.pm  Feature.pm  Library.pm  Preset.pm  Storage.pm  Sysex.pm
lib/Controller/: _074.pm  _080.pm  _085.pm  _086.pm  _090.pm  _090dep.pm  _fx.pm  _notes.pm  _nr.pm  _ps.pm  choice.pm  name.pm  numeric.pm  prozent.pm
lib/Editor/: Layout.pm  Library.pm  Library_Manager.pm  Prefs.pm  Prefs_Controller.pm  Prefs_General.pm  Presets.pm  Toolbar.pm  gtk.pm
lib/Feature/: MidiFeedbackLoop.pm
protocol/: golden.json  tables.json
src/gui/: app.cpp  mainframe.cpp  mainframe.h  paramcontrol.cpp  paramcontrol.h
src/lv2/: manifest.ttl.in  theremini.c
src/preset/: library.cpp  library.hpp
src/protocol/: internal.h  message.c  preset.c  sysex.c  value.c
src/protocol/include/theremini/: protocol.h
t/: check.sh  smoke.pl
tests/: CMakeLists.txt  golden.h  test_lv2.c  test_message.c  test_preset_decode.c  test_preset_storage.cpp  test_sysex.c  test_value_export.c
tests/fixtures/: perl_written.theremaxi
tests/fuzz-corpus/: bad_escape  escaped_name  messy_number  null_value  typical  unicode_escape  unterminated_string  whitespace
tools/: dump-protocol.pl  generate-c-golden.pl  generate-c-tables.pl  generate-lv2.pl
